# -E-Commerce

./: .gitignore
airflow/: docker-compose.yaml  pyproject.toml
airflow/config/: airflow.cfg
airflow/dags/: dbt_ecommerce_transform.py  s3_data_generator.py  s3_to_snowflake_multi_ingest.py  test.py
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml
dbt_project/models/Bronze/Staging/: sources.yml  stg_customers.sql  stg_inventory.sql  stg_orders.sql  stg_orders.yml
dbt_project/models/Data_vault/: HUB_ORDERS.yml  hub_orders.SQL  link_order_customer.SQL  link_order_customer.yml  sat_order_details.SQL  sat_order_details.yml
dbt_project/models/Data_vault/Facts/: hub_customer.sql  hub_customer.yml  hub_inventory.sql  hub_inventory.yml  sat_customer_details.sql  sat_customer_details.yml  sat_inventory_details.sql  sat_inventory_details.yml
dbt_project/models/Marts/: dim_customer.sql  dim_customer.yml  mart_daily_revenue.sql  mart_daily_revenue.yml  mart_inventory_turnover.sql  mart_inventory_turnover.yml
dbt_project/models/Staging/: stg_customers.sql  stg_customers.yml  stg_inventory.sql  stg_inventory.yml  stg_orders.sql  stg_orders.yml
dbt_project/models/example/: schema.yml  test_model.sql
dbt_project/models/silver/Raw_vault/: link_order_customers.yml  sat_order_details.yml
dbt_project/snapshots/: inventory_snapshot.sql
