[project]
name = "airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-amazon>=8.0.0",
    "apache-airflow-providers-snowflake>=6.12.2",
    "faker>=20.0.0",
]
